--- a/Flex_gather1.yml
+++ b/Flex_gather1.yml
@@ -7,12 +7,12 @@
     remote_device_awx_credential: FlexVPN
   tasks:
     - name: Configure Jump Server Connection
-      ansible.ansible_connection: ssh
-      ansible.ansible_user: forward
-      ansible_host: deveci-jump
-      ansible_password: '{{ deveci-jump.credential_password }}'
+      ansible.builtin.ansible_connection: ssh
+      ansible.builtin.ansible_user: forward
+      ansible.builtin.ansible_host: deveci-jump
+      ansible.builtin.ansible_password: '{{ deveci-jump.credential_password }}'
+
     - name: Gather Facts from Remote Device
-      hosts: 15.0.0.1
       gather_facts: true
       vars:
         ansible_user: forward
