--- a/Flex_gather1.yml
+++ b/Flex_gather1.yml
@@ -1,21 +1,25 @@
 ---
-- name: Gather Facts from Remote Device via Jump Server with AWX Credentials
+- name: Gather Facts from Cisco IOS Device via Jump Server with AWX Credentials
   hosts: localhost
   gather_facts: false
   vars:
     jump_server_awx_credential: deveci-jump
+    remote_device_ip: 15.0.0.254
     remote_device_awx_credential: FlexVPN
+
   tasks:
     - name: Configure Jump Server Connection
       ansible.builtin.shell: echo "Configuring Jump Server Connection"
       delegate_to: localhost
 
-    - name: Gather Facts from Remote Device
+    - name: Gather Facts from Cisco IOS Device
       gather_facts: true
       vars:
         ansible_user: forward
+        ansible_ssh_common_args: "-o ProxyJump=forward@deveci-jump"
         ansible_ssh_pass: '{{ FlexVPN.credential_password }}'
       tasks:
         - name: Display Gathered Facts
           ansible.builtin.debug:
             var: ansible_facts
+      delegate_to: '{{ remote_device_ip }}'
