--- a/Flex_gather1.yml
+++ b/Flex_gather1.yml
@@ -20,8 +20,7 @@
       environment:
         ANSIBLE_SSH_ARGS: '-o ProxyJump=forward@deveci-jump'
       vars:
-        ansible_ssh_pass: '{{ lookup("ansible.builtin.credentials", remote_device_awx_credential + ".credential_password") }}'
-
+        ansible_ssh_pass: '{{ FlexVPN.credential_password }}'
     - name: Display Gathered Facts
       ansible.builtin.debug:
         var: ansible_facts
