--- a/Flex_gather1.yml
+++ b/Flex_gather1.yml
@@ -1,27 +1,18 @@
 ---
-- name: Gather Facts from Remote Device via Jump Server with AWX Credentials
+- name: Ping from Jump Server via AWX Credentials
   hosts: localhost
   gather_facts: false
   vars:
     jump_server_awx_credential: deveci-jump
     remote_device_ip: 15.0.0.254
-    remote_device_awx_credential: FlexVPN
 
   tasks:
     - name: Configure Jump Server Connection
       ansible.builtin.shell: echo "Configuring Jump Server Connection"
       delegate_to: localhost
 
-    - name: Gather Facts from Cisco IOS Device
-      ansible.builtin.shell: echo "Gathering Facts from Cisco IOS Device"
+    - name: Ping Remote Device
+      ansible.builtin.ping:
       delegate_to: '{{ remote_device_ip }}'
-      environment:
-        ansible_user: forward
-      environment:
-        ANSIBLE_SSH_ARGS: '-o ProxyJump=forward@deveci-jump'
-      vars:
-        ansible_spassword: '{{ FlexVPN.credential_password }}'
-    - name: Display Gathered Facts
-      ansible.builtin.debug:
-        var: ansible_facts
-      run_once: true
+      become: false
+
