--- a/Flex_gather1.yml
+++ b/Flex_gather1.yml
@@ -1,18 +1,8 @@
 ---
-- name: Ping from Jump Server via AWX Credentials
-  hosts: localhost
+- name: Ping Jump Server
+  hosts: deveci-jump
   gather_facts: false
-  vars:
-    jump_server_awx_credential: deveci-jump
-    remote_device_ip: 15.0.0.254
 
   tasks:
-    - name: Configure Jump Server Connection
-      ansible.builtin.shell: echo "Configuring Jump Server Connection"
-      delegate_to: localhost
-
-    - name: Ping Remote Device
+    - name: Ping Jump Server
       ansible.builtin.ping:
-      delegate_to: '{{ remote_device_ip }}'
-      become: false
-
