--- a/Flex_gather1.yml
+++ b/Flex_gather1.yml
@@ -1,12 +1,10 @@
 ---
-- name: Gather Facts from Server
-  hosts: 10.128.18.11
+- name: Your Playbook Name
+  hosts: deveci_jump
+  become: yes
+  become_method: sudo
   gather_facts: true
-  vars:
-    ansible_user: forward
-    ansible_ssh_common_args: "-o ProxyJump=forward@deveci-jump"
 
   tasks:
-    - name: Display Gathered Facts
-      ansible.builtin.debug:
-        var: ansible_facts
+    - name: Your Task Name
+      ansible.builtin.ping:
