--- a/Flex_gather1.yml
+++ b/Flex_gather1.yml
@@ -2,6 +2,7 @@
 - name: Gather Facts from Remote Device via Jump Server with AWX Credentials
   hosts: localhost
   gather_facts: false
+
   vars:
     jump_server_awx_credential: deveci-jump
     remote_device_ip: 15.0.0.254
@@ -17,8 +18,7 @@
       delegate_to: '{{ remote_device_ip }}'
       environment:
         ansible_user: forward
-      vars:
-        ANSIBLE_SSH_ARGS: '-o ProxyJump=forward@deveci-jump'
+        ansible_ssh_common_args: "-o ProxyJump=forward@{{ jump_server_awx_credential }}"
         ansible_ssh_pass: '{{ lookup("ansible.builtin.credentials", remote_device_awx_credential + ".credential_password") }}'
 
     - name: Display Gathered Facts
