--- a/Inventory.yml
+++ b/Inventory.yml
@@ -1,12 +1,12 @@
 ---
 all:
   children:
-    deveci-jump:
+    deveci_jump:
       hosts:
-        jump-server-hostname:
+        jump_server_hostname:
           ansible_host: deveci-jump.local.forwardnetworks.com
           ansible_user: forward
-    cisco-ios:
+    cisco_ios:
       hosts:
         cisco-ios-device:
           ansible_host: 15.0.0.254
