--- a/Inventory.yml
+++ b/Inventory.yml
@@ -1,12 +1,12 @@
 ---
 all:
   children:
-    deveci_jump:
+    deveci-jump:
       hosts:
         jump_server_hostname:
           ansible_host: deveci-jump.local.forwardnetworks.com
           ansible_user: forward
-    cisco_ios:
+    cisco-ios:
       hosts:
-        cisco_ios_device:
+        cisco-ios-device:
           ansible_host: 15.0.0.254
