--- a/Inventory.yml
+++ b/Inventory.yml
@@ -3,7 +3,7 @@ all:
   children:
     deveci-jump:
       hosts:
-        jump_server_hostname:
+        jump-server-hostname:
           ansible_host: deveci-jump.local.forwardnetworks.com
           ansible_user: forward
     cisco-ios:
